--- a/style.css
+++ b/style.css
@@ -1,3 +1,19 @@
 .body {
     box-sizing: border-box;
+    background-color: aqua;
+  
+}
+
+h1 {
+    margin: auto;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 75px;
+
+}
+
+p {
+    margin: auto;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 22px;
+    
 }
